--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kimchi"
+name = "kimchi0"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 # If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
 risc0-zkvm = { version = "0.19.1", features = [ "std" ] }
-kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "master" }
+#kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "master" }
+kimchi = { path = "../../../proof-systems/kimchi" }
 #mina-tree = { git = "https://github.com/openmina/openmina.git", rev = "5f7a410cc2c07572afad055477ce2a5c2d768e5b"}
 serde = "1.0"
