--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -3,9 +3,11 @@ name = "host"
 version = "0.1.0"
 edition = "2021"
 
+build = "build.rs"
+
 [dependencies]
 methods = { path = "../methods" }
-risc0-zkvm = { version = "0.19.1", features = ["cuda"] }
+risc0-zkvm = { version = "0.19.1" }
 bonsai-sdk = "0.5.1"
 env_logger = "0.10"
 serde = "1.0"
@@ -16,3 +18,7 @@ hex = "0.4.3"
 bincode = { version = "1.3.3", features = [] }
 bytemuck = "1.14.0"
 anyhow = "1.0.75"
+
+[build-dependencies]
+rmp-serde = "1.1.2"
+kimchi = { path = "./../../proof-systems/kimchi" }
