--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["host", "methods"]
+members = ["host", "methods", "host/build_srs_raw"]
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
