--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -19,3 +19,4 @@ anyhow = "1.0.75"
 rand = "0.8.5"
 serde_with = { version = "1.14.0", features = [] }
 once_cell = "1.18.0"
+ark-serialize = "0.3.0"
