--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -19,6 +19,7 @@ bincode = { version = "1.3.3", features = [] }
 bytemuck = "1.14.0"
 anyhow = "1.0.75"
 ark-poly = "0.3.0"
+ark-ec = "0.3.0"
 
 [build-dependencies]
 rmp-serde = "1.1.2"
