--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -11,7 +11,7 @@ risc0-zkvm = { version = "0.19.1" }
 bonsai-sdk = "0.5.1"
 env_logger = "0.10"
 serde = "1.0"
-kimchi = { path = "./../../proof-systems/kimchi" }
+kimchi = { git = "https://github.com/aerius-labs/proof-systems.git", branch = "master" }
 #mina-tree = { git = "https://github.com/openmina/openmina.git", rev = "5f7a410cc2c07572afad055477ce2a5c2d768e5b"}
 rmp-serde = "1.1.2"
 hex = "0.4.3"
@@ -23,4 +23,4 @@ ark-ec = "0.3.0"
 
 [build-dependencies]
 rmp-serde = "1.1.2"
-kimchi = { path = "./../../proof-systems/kimchi" }
+kimchi = { git = "https://github.com/aerius-labs/proof-systems.git", branch = "master" }
