--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 # If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
-risc0-zkvm = { version = "0.19.1", features = [ "std" ] }
+risc0-zkvm = { version = "0.20.1", features = [ "std", "getrandom" ] }
 #kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "master" }
 kimchi = { git = "https://github.com/aerius-labs/proof-systems.git", branch = "master" }
 #mina-tree = { git = "https://github.com/openmina/openmina.git", rev = "5f7a410cc2c07572afad055477ce2a5c2d768e5b"}
